# dibuixos

./: .gitignore  DIBUIXOS.TR  DIBUIXOS.bak  README.md  dibuixos.DSW  dibuixos.OBR  dibuixos.csm  td.TR  tdconfig.td
SRC/: DIBASM.bak  DIBUIXOS.TR  DIBUIXOS.bak  INIT.bak  PRESENTA.bak  SVGA256.H  SVGA32K.H  SVGA64K.H  SVGAS3.H  SVGATC.H  SVGAUTIL.C  SVGAUTIL.H  SVGAUTIL.bak  TWK16.H  TWK256.bak  bcw.bat  bcw2.bat  dibasm.c  dibuixos.DSW  dibuixos.OBR  dibuixos.c  dibuixos.csm  dibuixos.h  dibuixos.ide  dibuixos.~de  init.c  presenta.c  stdout.txt  td2.bat  td22.bat  tdconfig.td
V95/: DIBUIXOS.PRJ  DIBUIXOS.bak
VNCurses/: CMakeLists.txt  Dibuixos  Dibuixos.cbp  Dibuixos.depend  Dibuixos.dev  Dibuixos.layout  Dibuixos.mk  Dibuixos.project  Dibuixos.workspace  Makefile  Makefile.win  compile_flags.txt  tags
VNCurses/.codelite/: Dibuixos-oscar.tags  Dibuixos.session  ctags
VNCurses/Dibuixos/: Dibuixos.mk  Dibuixos.project  Dibuixos.txt  compile_flags.txt
VNCurses/XDibuixos/: XDibuixos.mk  XDibuixos.project  XDibuixos.txt  compile_flags.txt  tags
VNCurses/src/: DBInit.c  DBMain.c  DBpresen.c  dibuixos.h  pch  pch.h
VTEXT/SRC/: DBINIT.C  DIBUIXOS.BAK  DIBUIXOS.C  DIBUIXOS.DSK  DIBUIXOS.H  DIBUIXOS.PRJ
